--- a/src/main/resources/fxml/FXMLPrincipal.fxml
+++ b/src/main/resources/fxml/FXMLPrincipal.fxml
@@ -4,35 +4,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLPrincipalController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLPrincipalController">
    <children>
       <HBox prefHeight="26.0" prefWidth="600.0">
          <children>
             <MenuBar HBox.hgrow="ALWAYS">
               <menus>
-                <Menu mnemonicParsing="false" text="Cadastros">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="" text="Categoria" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Relatórios">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="" text="Produto" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Gráficos">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="" text="Produtos por categoria" />
-                        <MenuItem mnemonicParsing="false" onAction="" text="Vendas por categoria/mês" />
-                  </items>
-                </Menu>
+                <Menu mnemonicParsing="false" text="Cadastros" />
+                <Menu mnemonicParsing="false" text="Relatórios" />
+                <Menu mnemonicParsing="false" text="Gráficos" />
               </menus>
             </MenuBar>
          </children>
@@ -47,12 +33,12 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="loadCliente" text="Cliente" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <Button layoutX="14.0" layoutY="43.0" mnemonicParsing="false" onAction="loadHospede" prefHeight="25.0" prefWidth="144.0" text="Hospede" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0" />
-                                    <Button layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="loadProdutos" text="Produtos/Serviços" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0" />
-                                    <Button layoutX="10.0" layoutY="113.0" mnemonicParsing="false" onAction="loadQuarto" prefHeight="25.0" prefWidth="153.0" text="Quarto" />
-                                    <Button layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="loadReserva" prefHeight="25.0" prefWidth="153.0" text="Reserva" />
-                                    <Button layoutX="10.0" layoutY="186.0" mnemonicParsing="false" onAction="loadUsuario" prefHeight="25.0" prefWidth="153.0" text="Usuário" />
+                                    <Button fx:id="buttonCliente" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadCliente" text="Cliente" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <Button fx:id="buttonHospede" layoutX="14.0" layoutY="43.0" mnemonicParsing="false" onAction="#loadHospede" prefHeight="25.0" prefWidth="144.0" text="Hospede" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0" />
+                                    <Button fx:id="buttonProdutos" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#loadProdutos" text="Produtos/Serviços" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0" />
+                                    <Button fx:id="buttonQuarto" layoutX="10.0" layoutY="113.0" mnemonicParsing="false" onAction="#loadQuarto" prefHeight="25.0" prefWidth="153.0" text="Quarto" />
+                                    <Button fx:id="buttonReserva" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#loadReserva" prefHeight="25.0" prefWidth="153.0" text="Reserva" />
+                                    <Button fx:id="buttonUsuario" layoutX="10.0" layoutY="186.0" mnemonicParsing="false" onAction="#loadUsuario" prefHeight="25.0" prefWidth="153.0" text="Usuário" />
                                  </children>
                               </AnchorPane>
                         </content>
