--- a/src/main/resources/fxml/FXMLQuartoLista.fxml
+++ b/src/main/resources/fxml/FXMLQuartoLista.fxml
@@ -7,21 +7,21 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="413.0" prefWidth="565.0" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLQuartoListaController">
+<VBox alignment="CENTER" prefHeight="413.0" prefWidth="565.0" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLQuartoListaController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="68.0" prefWidth="370.0" VBox.vgrow="NEVER">
          <children>
-            <Button mnemonicParsing="false" onAction="" text="Novo">
+            <Button mnemonicParsing="false" onAction="newRecord" text="Novo">
                <HBox.margin>
                   <Insets left="20.0" right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="buttonEdit" mnemonicParsing="false" onAction="" text="Editar">
+            <Button fx:id="buttonEdit" mnemonicParsing="false" onAction="#edit" text="Editar">
                <HBox.margin>
                   <Insets right="10.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Remover" />
+            <Button mnemonicParsing="false" onAction="#delete" text="Remover" />
          </children>
       </HBox>
       <TableView fx:id="tableData" prefHeight="345.0" prefWidth="599.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
