--- a/src/main/resources/fxml/FXMLReservaCadastro.fxml
+++ b/src/main/resources/fxml/FXMLReservaCadastro.fxml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLReservaCadastroController">
+<AnchorPane id="AnchorPane" prefHeight="394.0" prefWidth="395.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLReservaCadastroController">
     <stylesheets>
-        <URL value="@/styles/style.css"/>
+        <URL value="@/styles/style.css" />
     </stylesheets>
+    <children>
+      <Label layoutX="30.0" layoutY="14.0" text="Código" visible="false" />
+      <Label layoutX="26.0" layoutY="229.0" text="Data Reserva" />
+      <TextField fx:id="textId" editable="false" layoutX="83.0" layoutY="10.0" prefHeight="25.0" prefWidth="91.0" visible="false" />
+      <Button layoutX="198.0" layoutY="355.0" mnemonicParsing="false" onAction="save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
+      <Button layoutX="124.0" layoutY="355.0" mnemonicParsing="false" onAction="cancel" text="Cancelar" />
+      <Label layoutX="20.0" layoutY="14.0" text="Cliente" />
+      <Label layoutX="20.0" layoutY="65.0" text="Quarto" />
+      <Label layoutX="155.0" layoutY="229.0" text="Data Entrada" />
+      <Label layoutX="279.0" layoutY="229.0" text="Data Saída" />
+      <Label layoutX="186.0" layoutY="65.0" text="Valor Diária" />
+      <TextField fx:id="textValorDiaria" layoutX="186.0" layoutY="82.0" prefHeight="25.0" prefWidth="195.0" />
+      <Label layoutX="19.0" layoutY="303.0" text="Motivo" />
+      <TextField fx:id="textMotivo" layoutX="71.0" layoutY="299.0" prefHeight="25.0" prefWidth="306.0" />
+      <ChoiceBox fx:id="cbCliente" layoutX="21.0" layoutY="36.0" prefHeight="25.0" prefWidth="149.0" />
+      <ChoiceBox fx:id="cbQuarto" layoutX="21.0" layoutY="82.0" prefHeight="25.0" prefWidth="149.0" />
+      <ListView fx:id="listHospedes" layoutX="21.0" layoutY="131.0" prefHeight="81.0" prefWidth="149.0" />
+      <Label layoutX="23.0" layoutY="114.0" text="Hóspedes" />
+      <DatePicker fx:id="dateReserva" layoutX="19.0" layoutY="248.0" prefHeight="25.0" prefWidth="104.0" />
+      <DatePicker fx:id="dateEntrada" layoutX="146.0" layoutY="248.0" prefHeight="25.0" prefWidth="104.0" />
+      <DatePicker fx:id="dateSaida" layoutX="273.0" layoutY="248.0" prefHeight="25.0" prefWidth="104.0" />
+      <Button fx:id="buttonNovoCliente" layoutX="186.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="195.0" text="Novo Cliente" />
+      <Button fx:id="buttonNovoHospede" layoutX="184.0" layoutY="131.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="195.0" text="Novo Hóspede" />
+   </children>
 </AnchorPane>
