--- a/src/main/resources/fxml/FXMLHospedeCadastro.fxml
+++ b/src/main/resources/fxml/FXMLHospedeCadastro.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="335.0" prefWidth="513.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLHospedeCadastroController">
+<AnchorPane id="AnchorPane" prefHeight="335.0" prefWidth="513.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLHospedeCadastroController">
     <stylesheets>
         <URL value="@/styles/style.css" />
     </stylesheets>
@@ -16,8 +16,8 @@
       <Label layoutX="280.0" layoutY="77.0" text="Telefone Comercial" />
       <TextField fx:id="textId" editable="false" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="217.0" />
       <TextField fx:id="textTelComercial" layoutX="280.0" layoutY="95.0" prefHeight="25.0" prefWidth="217.0" />
-      <Button layoutX="272.0" layoutY="300.0" mnemonicParsing="false" onAction="save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
-      <Button layoutX="199.0" layoutY="300.0" mnemonicParsing="false" onAction="cancel" text="Cancelar" />
+      <Button layoutX="272.0" layoutY="300.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
+      <Button layoutX="199.0" layoutY="300.0" mnemonicParsing="false" onAction="#cancel" text="Cancelar" />
       <Label layoutX="30.0" layoutY="77.0" text="Nome" />
       <TextField fx:id="textNome" layoutX="30.0" layoutY="94.0" prefHeight="25.0" prefWidth="217.0" />
       <Label layoutX="30.0" layoutY="129.0" text="CPF" />
