--- a/src/main/resources/fxml/FXMLProdutosCadastro.fxml
+++ b/src/main/resources/fxml/FXMLProdutosCadastro.fxml
@@ -16,8 +16,8 @@
       <Label layoutX="30.0" layoutY="129.0" text="Descrição" />
       <TextField fx:id="textId" editable="false" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="217.0" />
       <TextField fx:id="textDescricao" layoutX="30.0" layoutY="146.0" prefHeight="25.0" prefWidth="217.0" />
-      <Button layoutX="142.0" layoutY="298.0" mnemonicParsing="false" onAction="save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
-      <Button layoutX="64.0" layoutY="298.0" mnemonicParsing="false" onAction="cancel" text="Cancelar" />
+      <Button layoutX="142.0" layoutY="298.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
+      <Button layoutX="64.0" layoutY="298.0" mnemonicParsing="false" onAction="#cancel" text="Cancelar" />
       <Label layoutX="31.0" layoutY="77.0" text="Nome" />
       <TextField fx:id="textNome" layoutX="31.0" layoutY="94.0" prefHeight="25.0" prefWidth="217.0" />
       <ChoiceBox fx:id="cbCategoria" layoutX="33.0" layoutY="249.0" prefHeight="25.0" prefWidth="217.0" />
