--- a/src/main/resources/fxml/FXMLProdutosLista.fxml
+++ b/src/main/resources/fxml/FXMLProdutosLista.fxml
@@ -11,17 +11,17 @@
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="68.0" prefWidth="370.0" VBox.vgrow="NEVER">
          <children>
-            <Button mnemonicParsing="false" onAction="" text="Novo">
+            <Button mnemonicParsing="false" onAction="#newRecord" text="Novo">
                <HBox.margin>
                   <Insets left="20.0" right="10.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="buttonEdit" mnemonicParsing="false" onAction="" text="Editar">
+            <Button fx:id="buttonEdit" mnemonicParsing="false" onAction="#edit" text="Editar">
                <HBox.margin>
                   <Insets right="10.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Remover" />
+            <Button mnemonicParsing="false" onAction="#delete" text="Remover" />
          </children>
       </HBox>
       <TableView fx:id="tableData" prefHeight="345.0" prefWidth="599.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
