--- a/src/main/resources/fxml/FXMLQuartoCadastro.fxml
+++ b/src/main/resources/fxml/FXMLQuartoCadastro.fxml
@@ -16,8 +16,8 @@
       <Label layoutX="30.0" layoutY="141.0" text="Quantidade de camas" />
       <TextField fx:id="textId" editable="false" layoutX="30.0" layoutY="42.0" prefHeight="25.0" prefWidth="217.0" />
       <TextField fx:id="textQtdeCamas" layoutX="30.0" layoutY="158.0" prefHeight="25.0" prefWidth="217.0" />
-      <Button layoutX="133.0" layoutY="317.0" mnemonicParsing="false" onAction="" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
-      <Button layoutX="61.0" layoutY="317.0" mnemonicParsing="false" onAction="" text="Cancelar" />
+      <Button layoutX="133.0" layoutY="317.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
+      <Button layoutX="61.0" layoutY="317.0" mnemonicParsing="false" onAction="#cancel" text="Cancelar" />
       <Label layoutX="30.0" layoutY="87.0" text="Número" />
       <TextField fx:id="textNumero" layoutX="30.0" layoutY="104.0" prefHeight="25.0" prefWidth="62.0" />
       <ChoiceBox fx:id="cbTipo" layoutX="111.0" layoutY="104.0" prefHeight="25.0" prefWidth="136.0" />
