--- a/src/main/resources/fxml/FXMLReservaCadastro.fxml
+++ b/src/main/resources/fxml/FXMLReservaCadastro.fxml
@@ -6,35 +6,52 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="394.0" prefWidth="395.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLReservaCadastroController">
+<AnchorPane id="AnchorPane" prefHeight="375.0" prefWidth="734.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLReservaCadastroController">
     <stylesheets>
         <URL value="@/styles/style.css" />
     </stylesheets>
     <children>
       <Label layoutX="30.0" layoutY="14.0" text="Código" visible="false" />
-      <Label layoutX="26.0" layoutY="229.0" text="Data Reserva" />
       <TextField fx:id="textId" editable="false" layoutX="83.0" layoutY="10.0" prefHeight="25.0" prefWidth="91.0" visible="false" />
-      <Button layoutX="198.0" layoutY="355.0" mnemonicParsing="false" onAction="save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
-      <Button layoutX="124.0" layoutY="355.0" mnemonicParsing="false" onAction="cancel" text="Cancelar" />
-      <Label layoutX="20.0" layoutY="14.0" text="Cliente" />
-      <Label layoutX="20.0" layoutY="65.0" text="Quarto" />
-      <Label layoutX="155.0" layoutY="229.0" text="Data Entrada" />
-      <Label layoutX="279.0" layoutY="229.0" text="Data Saída" />
-      <Label layoutX="186.0" layoutY="65.0" text="Valor Diária" />
-      <TextField fx:id="textValorDiaria" layoutX="186.0" layoutY="82.0" prefHeight="25.0" prefWidth="195.0" />
-      <Label layoutX="19.0" layoutY="303.0" text="Motivo" />
-      <TextField fx:id="textMotivo" layoutX="71.0" layoutY="299.0" prefHeight="25.0" prefWidth="306.0" />
-      <ChoiceBox fx:id="cbCliente" layoutX="21.0" layoutY="36.0" prefHeight="25.0" prefWidth="149.0" />
-      <ChoiceBox fx:id="cbQuarto" layoutX="21.0" layoutY="82.0" prefHeight="25.0" prefWidth="149.0" />
-      <ListView fx:id="listHospedes" layoutX="21.0" layoutY="131.0" prefHeight="81.0" prefWidth="149.0" />
-      <Label layoutX="23.0" layoutY="114.0" text="Hóspedes" />
-      <DatePicker fx:id="dateReserva" layoutX="19.0" layoutY="248.0" prefHeight="25.0" prefWidth="104.0" />
-      <DatePicker fx:id="dateEntrada" layoutX="146.0" layoutY="248.0" prefHeight="25.0" prefWidth="104.0" />
-      <DatePicker fx:id="dateSaida" layoutX="273.0" layoutY="248.0" prefHeight="25.0" prefWidth="104.0" />
-      <Button fx:id="buttonNovoCliente" layoutX="186.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="195.0" text="Novo Cliente" />
-      <Button fx:id="buttonNovoHospede" layoutX="184.0" layoutY="131.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="195.0" text="Novo Hóspede" />
+      <Button layoutX="365.0" layoutY="336.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="Salvar" />
+      <Button layoutX="285.0" layoutY="336.0" mnemonicParsing="false" onAction="#cancel" text="Cancelar" />
+      <SplitPane dividerPositions="0.5439093484419264" layoutX="14.0" layoutY="14.0" prefHeight="317.0" prefWidth="708.0">
+        <items>
+          <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="303.0" prefWidth="381.0">
+               <children>
+                  <Label layoutX="20.0" layoutY="145.0" text="Data Reserva" />
+                  <Label layoutX="14.0" layoutY="14.0" text="Cliente" />
+                  <Label layoutX="12.0" layoutY="76.0" text="Quarto" />
+                  <Label layoutX="149.0" layoutY="145.0" text="Data Entrada" />
+                  <Label layoutX="273.0" layoutY="145.0" text="Data Saída" />
+                  <Label layoutX="178.0" layoutY="76.0" text="Valor Diária" />
+                  <TextField fx:id="textValorDiaria" layoutX="178.0" layoutY="93.0" prefHeight="25.0" prefWidth="195.0" />
+                  <Label layoutX="14.0" layoutY="223.0" text="Motivo" />
+                  <TextField fx:id="textMotivo" layoutX="65.0" layoutY="219.0" prefHeight="25.0" prefWidth="306.0" />
+                  <ChoiceBox fx:id="cbCliente" layoutX="15.0" layoutY="36.0" prefHeight="25.0" prefWidth="149.0" />
+                  <ChoiceBox fx:id="cbQuarto" layoutX="13.0" layoutY="93.0" prefHeight="25.0" prefWidth="149.0" onAction="#changeValue"/>
+                  <DatePicker fx:id="dateReserva" layoutX="13.0" layoutY="164.0" prefHeight="25.0" prefWidth="104.0" />
+                  <DatePicker fx:id="dateEntrada" layoutX="140.0" layoutY="164.0" prefHeight="25.0" prefWidth="104.0" />
+                  <DatePicker fx:id="dateSaida" layoutX="267.0" layoutY="164.0" prefHeight="25.0" prefWidth="104.0" />
+                  <Button fx:id="buttonNovoCliente" layoutX="180.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="195.0" text="Novo Cliente" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="321.0" prefWidth="322.0">
+               <children>
+                  <ListView fx:id="listHospedes" layoutX="14.0" layoutY="31.0" prefHeight="90.0" prefWidth="289.0" />
+                  <Label layoutX="16.0" layoutY="14.0" text="Hóspedes" />
+                  <Button fx:id="buttonNovoHospede" layoutX="158.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="104.0" text="Novo Hóspede" />
+                  <ListView fx:id="listSelHospedes" layoutX="14.0" layoutY="184.0" prefHeight="90.0" prefWidth="289.0" />
+                  <Label layoutX="16.0" layoutY="167.0" text="Hóspedes Selecionados" />
+                  <Button fx:id="buttonAddToList" layoutX="35.0" layoutY="130.0" mnemonicParsing="false" onAction="#addToList" prefHeight="25.0" prefWidth="116.0" text="Adicionar na lista" />
+                  <Button fx:id="buttonRemove" layoutX="102.0" layoutY="282.0" mnemonicParsing="false" onAction="#removeFromList" prefHeight="25.0" prefWidth="116.0" text="Remover da lista" />
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
