--- a/src/main/resources/fxml/FXMLReservaManut.fxml
+++ b/src/main/resources/fxml/FXMLReservaManut.fxml
@@ -1,14 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLReservaManutController">
-    <stylesheets>
-        <URL value="@/styles/style.css"/>
-    </stylesheets>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="686.0" prefWidth="686.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+    <right>
+        
+    </right>
+   <bottom>
+      <HBox prefHeight="60.0" prefWidth="1081.0" BorderPane.alignment="CENTER">
+         <children>
+            <Pane prefHeight="60.0" prefWidth="1099.0">
+               <children>
+                  <ProgressBar fx:id="progressReserva" layoutX="11.0" layoutY="37.0" prefHeight="18.0" prefWidth="666.0" progress="0.0" />
+                  <Label layoutX="14.0" layoutY="14.0" text="Usuário atual:" />
+                  <TextField fx:id="textActualUser" layoutX="93.0" layoutY="10.0" prefHeight="25.0" prefWidth="150.0" />
+                  <Label layoutX="256.0" layoutY="14.0" text="Usuário responsável pelo cadastro desta reserva:" />
+                  <TextField fx:id="textUserRegistered" layoutX="522.0" layoutY="10.0" prefHeight="25.0" prefWidth="157.0" />
+               </children>
+            </Pane>
+         </children>
+      </HBox>
+   </bottom>
+   <center>
+      <VBox fx:id="boxProdutos" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </center>
+   <top>
+      <VBox prefHeight="243.0" prefWidth="1081.0" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane prefHeight="99.0" prefWidth="1081.0">
+               <children>
+                  <Label layoutX="189.0" layoutY="14.0" text="Controle de Reservas">
+                     <font>
+                        <Font name="Arial Bold" size="30.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="cbCliente" layoutX="175.0" layoutY="55.0" prefHeight="25.0" prefWidth="238.0" />
+                  <Label layoutX="14.0" layoutY="59.0" text="Selecionar Cliente da Reserva: " />
+                  <Button fx:id="buttonConfirm" layoutX="421.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="98.0" text="Confirmar" />
+               </children>
+            </AnchorPane>
+            <AnchorPane prefHeight="159.0" prefWidth="1081.0">
+               <children>
+                  <Label layoutX="14.0" layoutY="18.0" text="Cliente" />
+                  <TextField fx:id="textCliente" layoutX="66.0" layoutY="14.0" prefHeight="25.0" prefWidth="292.0" />
+                  <TextField fx:id="textQuarto" layoutX="66.0" layoutY="51.0" prefHeight="25.0" prefWidth="293.0" />
+                  <Label layoutX="14.0" layoutY="55.0" text="Quarto" />
+                  <Label layoutX="202.0" layoutY="121.0" text="Data Fim" />
+                  <TextField fx:id="dateEnd" layoutX="261.0" layoutY="117.0" prefHeight="25.0" prefWidth="97.0" />
+                  <Label layoutX="24.0" layoutY="121.0" text="Data Início" />
+                  <Label layoutX="14.0" layoutY="90.0" text="Data Reserva" />
+                  <TextField fx:id="dateStart" layoutX="91.0" layoutY="117.0" prefHeight="25.0" prefWidth="80.0" />
+                  <TextField fx:id="dateReserva" layoutX="91.0" layoutY="86.0" prefHeight="25.0" prefWidth="80.0" />
+                  <ListView fx:id="listHospedes" layoutX="368.0" layoutY="31.0" prefHeight="111.0" prefWidth="308.0" />
+                  <Label layoutX="368.0" layoutY="10.0" text="Hóspedes" />
+                  <Label layoutX="181.0" layoutY="90.0" text="Valor Diária" />
+                  <TextField fx:id="textValorDiaria" layoutX="260.0" layoutY="86.0" prefHeight="25.0" prefWidth="97.0" />
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
+   </top>
+</BorderPane>
