--- a/src/main/resources/fxml/FXMLPrincipal.fxml
+++ b/src/main/resources/fxml/FXMLPrincipal.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.221-b09" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLPrincipalController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLPrincipalController">
    <children>
       <HBox prefHeight="26.0" prefWidth="600.0">
          <children>
@@ -27,7 +27,7 @@
         <items>
           <AnchorPane maxWidth="200.0" minHeight="0.0" minWidth="0.0" prefWidth="150.0">
                <children>
-                  <Accordion layoutX="-13.0" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Accordion prefHeight="316.0" prefWidth="175.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <panes>
                       <TitledPane animated="false" text="Cadastros">
                         <content>
@@ -55,6 +55,7 @@
                       </TitledPane>
                     </panes>
                   </Accordion>
+                  <Button fx:id="buttonOpenReservas" layoutX="24.0" layoutY="333.0" mnemonicParsing="false" onAction="#openReservas" text="Controle de Reservas" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
