--- a/src/main/resources/fxml/FXMLProdutosListaReserva.fxml
+++ b/src/main/resources/fxml/FXMLProdutosListaReserva.fxml
@@ -11,33 +11,33 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="626.0" prefWidth="425.0" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLProdutosListaReservaController">
+<VBox alignment="CENTER" prefHeight="547.0" prefWidth="686.0" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLProdutosListaReservaController">
     <children>
-        <HBox alignment="CENTER_LEFT" prefHeight="151.0" prefWidth="425.0" VBox.vgrow="NEVER">
+        <HBox alignment="CENTER_LEFT" prefHeight="108.0" prefWidth="686.0" VBox.vgrow="NEVER">
          <children>
-            <AnchorPane prefHeight="112.0" prefWidth="425.0">
+            <AnchorPane prefHeight="115.0" prefWidth="686.0">
                <children>
-                  <Button fx:id="buttonNovoProduto" layoutX="376.0" layoutY="36.0" mnemonicParsing="false" onAction="" text="Novo" />
-                  <ChoiceBox fx:id="cbProdutos" layoutX="14.0" layoutY="37.0" prefHeight="25.0" prefWidth="354.0" />
-                  <Label layoutX="145.0" layoutY="14.0" text="Controle de Produtos/Serviços" />
-                  <Button fx:id="buttonRemoveFromList" layoutX="236.0" layoutY="71.0" mnemonicParsing="false" onAction="#removeFromList" text="Remover da lista" />
-                  <Button fx:id="buttonAddToList" layoutX="121.0" layoutY="72.0" mnemonicParsing="false" onAction="#addToList" text="Adicionar na lista" />
+                  <Button fx:id="buttonNovoProduto" layoutX="502.0" layoutY="36.0" mnemonicParsing="false" onAction="#newProduct" prefHeight="25.0" prefWidth="72.0" text="Novo" />
+                  <ChoiceBox fx:id="cbProdutos" layoutX="140.0" layoutY="37.0" prefHeight="25.0" prefWidth="354.0" />
+                  <Label layoutX="271.0" layoutY="14.0" text="Controle de Produtos/Serviços" />
+                  <Button fx:id="buttonRemoveFromList" layoutX="362.0" layoutY="71.0" mnemonicParsing="false" onAction="#removeFromList" text="Remover da lista" />
+                  <Button fx:id="buttonAddToList" layoutX="247.0" layoutY="72.0" mnemonicParsing="false" onAction="#addToList" text="Adicionar na lista" />
                </children>
             </AnchorPane>
          </children>
         </HBox>
-        <TableView fx:id="tableData" prefHeight="508.0" prefWidth="425.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tableData" prefHeight="310.0" prefWidth="686.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
             <columns>
                 <TableColumn fx:id="columnId" maxWidth="150.0" minWidth="61.0" prefWidth="61.0" text="Código" />
-                <TableColumn fx:id="columnNome" maxWidth="368.0" minWidth="72.0" prefWidth="195.0" text="Nome" />
-                <TableColumn fx:id="columnValor" prefWidth="75.0" text="Valor" />
-                <TableColumn fx:id="columnCategoria" prefWidth="100.0" text="Categoria" />
+                <TableColumn fx:id="columnNome" maxWidth="368.0" minWidth="72.0" prefWidth="208.0" text="Nome" />
+                <TableColumn fx:id="columnValor" prefWidth="93.0" text="Valor" />
+                <TableColumn fx:id="columnCategoria" prefWidth="138.0" text="Categoria" />
             </columns>
         </TableView>
-      <Pane prefHeight="82.0" prefWidth="425.0">
+      <Pane prefHeight="50.0" prefWidth="686.0">
          <children>
-            <Label layoutX="167.0" layoutY="14.0" text="Valor total atual: " />
-            <TextField fx:id="textTotal" layoutX="262.0" layoutY="10.0" />
+            <Label layoutX="97.0" layoutY="14.0" text="Valor total atual: " />
+            <TextField fx:id="textTotal" layoutX="200.0" layoutY="10.0" />
          </children>
       </Pane>
     </children>
