--- a/src/main/resources/fxml/FXMLPrincipal.fxml
+++ b/src/main/resources/fxml/FXMLPrincipal.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLPrincipalController">
    <children>
@@ -25,9 +26,9 @@
       </HBox>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <items>
-          <AnchorPane maxWidth="200.0" minHeight="0.0" minWidth="0.0" prefWidth="150.0">
+          <AnchorPane maxWidth="200.0" minHeight="0.0" minWidth="0.0" prefHeight="428.0" prefWidth="175.0">
                <children>
-                  <Accordion prefHeight="316.0" prefWidth="175.0" AnchorPane.bottomAnchor="56.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Accordion prefHeight="372.0" prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <panes>
                       <TitledPane animated="false" text="Cadastros">
                         <content>
@@ -37,12 +38,29 @@
                                     <Button fx:id="buttonHospede" layoutX="14.0" layoutY="43.0" mnemonicParsing="false" onAction="#loadHospede" prefHeight="25.0" prefWidth="144.0" text="Hospede" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0" />
                                     <Button fx:id="buttonProdutos" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#loadProdutos" text="Produtos/Serviços" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0" />
                                     <Button fx:id="buttonQuarto" layoutX="10.0" layoutY="113.0" mnemonicParsing="false" onAction="#loadQuarto" prefHeight="25.0" prefWidth="153.0" text="Quarto" />
-                                    <Button fx:id="buttonReserva" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#loadReserva" prefHeight="25.0" prefWidth="153.0" text="Reserva" />
-                                    <Button fx:id="buttonUsuario" layoutX="10.0" layoutY="186.0" mnemonicParsing="false" onAction="#loadUsuario" prefHeight="25.0" prefWidth="153.0" text="Usuário" />
+                                    <Button fx:id="buttonUsuario" layoutX="10.0" layoutY="147.0" mnemonicParsing="false" onAction="#loadUsuario" prefHeight="25.0" prefWidth="153.0" text="Usuário" />
                                  </children>
                               </AnchorPane>
                         </content>
                       </TitledPane>
+                        <TitledPane animated="false" text="Reservas">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <Button fx:id="buttonOpenReservas" layoutX="14.0" layoutY="75.0" mnemonicParsing="false" onAction="#openReservas" prefHeight="38.0" prefWidth="146.0" text="Controle de Reservas">
+                                       <font>
+                                          <Font size="13.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="buttonReserva" layoutX="15.0" layoutY="24.0" mnemonicParsing="false" onAction="#loadReserva" prefHeight="35.0" prefWidth="143.0" text="Check-In Reservas">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </TitledPane>
                       <TitledPane animated="false" prefHeight="206.0" prefWidth="179.0" text="Relatórios">
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
@@ -55,12 +73,11 @@
                       </TitledPane>
                     </panes>
                   </Accordion>
-                  <Button fx:id="buttonOpenReservas" layoutX="24.0" layoutY="333.0" mnemonicParsing="false" onAction="#openReservas" text="Controle de Reservas" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <VBox fx:id="boxPrincipal" layoutX="68.0" layoutY="121.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                  <VBox fx:id="boxPrincipal" layoutX="68.0" layoutY="121.0" prefHeight="352.0" prefWidth="400.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="10.0" />
                </children>
             </AnchorPane>
         </items>
