--- a/src/main/resources/fxml/FXMLReservaManut.fxml
+++ b/src/main/resources/fxml/FXMLReservaManut.fxml
@@ -25,9 +25,9 @@
                <children>
                   <ProgressBar fx:id="progressReserva" layoutX="11.0" layoutY="37.0" prefHeight="18.0" prefWidth="666.0" progress="0.0" />
                   <Label layoutX="14.0" layoutY="11.0" text="Usuário atual:" />
-                  <TextField fx:id="textActualUser" layoutX="93.0" layoutY="7.0" prefHeight="25.0" prefWidth="150.0" />
+                  <TextField fx:id="textActualUser" editable="false" layoutX="93.0" layoutY="7.0" prefHeight="25.0" prefWidth="150.0" />
                   <Label layoutX="256.0" layoutY="11.0" text="Usuário responsável pelo cadastro desta reserva:" />
-                  <TextField fx:id="textUserRegistered" layoutX="522.0" layoutY="7.0" prefHeight="25.0" prefWidth="157.0" />
+                  <TextField fx:id="textUserRegistered" editable="false" layoutX="522.0" layoutY="7.0" prefHeight="25.0" prefWidth="157.0" />
                   <Separator layoutX="8.0" layoutY="-1.0" prefHeight="3.0" prefWidth="671.0" />
                </children>
             </Pane>
@@ -50,24 +50,29 @@
                   <ChoiceBox fx:id="cbCliente" layoutX="175.0" layoutY="55.0" prefHeight="25.0" prefWidth="238.0" />
                   <Label layoutX="14.0" layoutY="59.0" text="Selecionar Cliente da Reserva: " />
                   <Button fx:id="buttonConfirm" layoutX="421.0" layoutY="55.0" mnemonicParsing="false" onAction="#confirmCliente" prefHeight="25.0" prefWidth="98.0" text="Confirmar" />
+                  <Button fx:id="buttonCheckout" layoutX="534.0" layoutY="49.0" mnemonicParsing="false" onAction="#checkoutReserva" prefHeight="25.0" prefWidth="138.0" text="Check-Out Reserva">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="163.0" prefWidth="686.0">
                <children>
                   <Label layoutX="14.0" layoutY="18.0" text="Cliente" />
-                  <TextField fx:id="textCliente" layoutX="66.0" layoutY="14.0" prefHeight="25.0" prefWidth="292.0" />
-                  <TextField fx:id="textQuarto" layoutX="66.0" layoutY="51.0" prefHeight="25.0" prefWidth="293.0" />
+                  <TextField fx:id="textCliente" editable="false" layoutX="66.0" layoutY="14.0" prefHeight="25.0" prefWidth="292.0" />
+                  <TextField fx:id="textQuarto" editable="false" layoutX="66.0" layoutY="51.0" prefHeight="25.0" prefWidth="293.0" />
                   <Label layoutX="14.0" layoutY="55.0" text="Quarto" />
                   <Label layoutX="202.0" layoutY="121.0" text="Data Fim" />
-                  <TextField fx:id="dateEnd" layoutX="261.0" layoutY="117.0" prefHeight="25.0" prefWidth="97.0" />
+                  <TextField fx:id="dateEnd" editable="false" layoutX="261.0" layoutY="117.0" prefHeight="25.0" prefWidth="97.0" />
                   <Label layoutX="24.0" layoutY="121.0" text="Data Início" />
                   <Label layoutX="14.0" layoutY="90.0" text="Data Reserva" />
-                  <TextField fx:id="dateStart" layoutX="91.0" layoutY="117.0" prefHeight="25.0" prefWidth="80.0" />
-                  <TextField fx:id="dateReserva" layoutX="91.0" layoutY="86.0" prefHeight="25.0" prefWidth="80.0" />
+                  <TextField fx:id="dateStart" editable="false" layoutX="91.0" layoutY="117.0" prefHeight="25.0" prefWidth="80.0" />
+                  <TextField fx:id="dateReserva" editable="false" layoutX="91.0" layoutY="86.0" prefHeight="25.0" prefWidth="80.0" />
                   <ListView fx:id="listHospedes" layoutX="368.0" layoutY="31.0" prefHeight="111.0" prefWidth="308.0" />
                   <Label layoutX="368.0" layoutY="10.0" text="Hóspedes" />
                   <Label layoutX="181.0" layoutY="90.0" text="Valor Diária" />
-                  <TextField fx:id="textValorDiaria" layoutX="260.0" layoutY="86.0" prefHeight="25.0" prefWidth="97.0" />
+                  <TextField fx:id="textValorDiaria" editable="false" layoutX="260.0" layoutY="86.0" prefHeight="25.0" prefWidth="97.0" />
                   <Separator layoutX="8.0" layoutY="152.0" prefHeight="4.0" prefWidth="662.0" />
                   <Separator layoutX="12.0" layoutY="2.0" prefHeight="3.0" prefWidth="663.0" />
                </children>
