--- a/src/main/resources/fxml/FXMLPrincipal.fxml
+++ b/src/main/resources/fxml/FXMLPrincipal.fxml
@@ -2,28 +2,14 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.utfpr.alexandre.coelho.oo24s.controller.FXMLPrincipalController">
    <children>
-      <HBox prefHeight="26.0" prefWidth="600.0">
-         <children>
-            <MenuBar HBox.hgrow="ALWAYS">
-              <menus>
-                <Menu mnemonicParsing="false" text="Cadastros" />
-                <Menu mnemonicParsing="false" text="Relatórios" />
-                <Menu mnemonicParsing="false" text="Gráficos" />
-              </menus>
-            </MenuBar>
-         </children>
-      </HBox>
       <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <items>
           <AnchorPane maxWidth="200.0" minHeight="0.0" minWidth="0.0" prefHeight="428.0" prefWidth="175.0">
@@ -61,20 +47,12 @@
                               </AnchorPane>
                           </content>
                         </TitledPane>
-                      <TitledPane animated="false" prefHeight="206.0" prefWidth="179.0" text="Relatórios">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                 <children>
-                                    <Button fx:id="buttonShowReport" onAction="#showReportProduto" layoutX="61.0" layoutY="14.0" mnemonicParsing="false" text="Relatórios de Check-Out" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0" />
-                                 </children></AnchorPane>
-                        </content>
-                      </TitledPane>
                       <TitledPane animated="false" text="Gráficos">
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
                                     <Button layoutX="61.0" layoutY="14.0" mnemonicParsing="false" onAction="#showPieChart" text="Reservas no Mês" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0" />
-                                    <Button layoutX="61.0" layoutY="57.0" mnemonicParsing="false" text="Valor Total No Mês" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+                                    <Button layoutX="61.0" layoutY="57.0" mnemonicParsing="false" onAction="#showChartValor" text="Valor Total No Mês" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
                                  </children></AnchorPane>
                         </content>
                       </TitledPane>
