--- a/src/main/resources/fxml/FXMLReservaManut.fxml
+++ b/src/main/resources/fxml/FXMLReservaManut.fxml
@@ -50,7 +50,7 @@
                   <ChoiceBox fx:id="cbCliente" layoutX="175.0" layoutY="55.0" prefHeight="25.0" prefWidth="238.0" />
                   <Label layoutX="14.0" layoutY="59.0" text="Selecionar Cliente da Reserva: " />
                   <Button fx:id="buttonConfirm" layoutX="421.0" layoutY="55.0" mnemonicParsing="false" onAction="#confirmCliente" prefHeight="25.0" prefWidth="98.0" text="Confirmar" />
-                  <Button fx:id="buttonCheckout" layoutX="534.0" layoutY="49.0" mnemonicParsing="false" onAction="#checkoutReserva" prefHeight="25.0" prefWidth="138.0" text="Check-Out Reserva">
+                  <Button fx:id="buttonCheckout" layoutX="535.0" layoutY="52.0" mnemonicParsing="false" onAction="#checkoutReserva" prefHeight="18.0" prefWidth="144.0" text="Check-Out Reserva" visible="false">
                      <font>
                         <Font size="14.0" />
                      </font>
